# AutonomousWheelchair

./: README.md  hogfeatures.m
PulseSensor_2_0/: Interrupt.ino  PulseSensor_2_0.ino
Velocity/: Velocity.ino
annotationParser/: README  annotationParser  main.cpp
cropIms/: CMakeLists.txt  main.cpp
jetsonTX2GPIO/: exampleGPIOApp.cpp  jetsonGPIO.h
motorControl/: motorControl.ino
resizeIms/: CMakeLists.txt  main.cpp
testHOG/: CMakeLists.txt  main.cpp
testHOG/genfiles/: cvHOGClassifier.yaml
trainHOG-master-trainwithmatlab/: main.cpp  main.o.d  opencvhogtrainer
zed_persondetect/: CMakeCache.txt  CMakeLists.txt  Makefile  ZED_Person_Detect  cmake_install.cmake
zed_persondetect/src/: main.cpp
